app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 32000
  selector:
    run: demo
  type: NodePort
